WebApppページの修正

--- a/services/webapp.html
+++ b/services/webapp.html
@@ -80,153 +80,100 @@
   </section>
 
   <!-- 自社SaaS製品紹介 -->
-  <section class="py-16 bg-white">
-    <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
+  <section class="py-20 bg-white">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <!-- セクションヘッダー -->
       <div class="text-center mb-16">
-        <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-6">
-          自社開発SaaS製品のご紹介
-        </h2>
-        <p class="text-lg text-gray-600 max-w-3xl mx-auto">
-          カイタックジャパンが開発・提供する、<br>
-          サブスクリプション形式のSaaSサービスをご紹介します。<br>
-          低コストで即座にご利用いただけます。
+        <h2 class="text-4xl md:text-5xl font-bold text-gray-900 mb-4">Application Development</h2>
+        <p class="text-xl text-gray-600">自社開発アプリケーション</p>
+        <p class="text-gray-600 mt-4 max-w-3xl mx-auto leading-relaxed">
+          最新技術を活用した革新的なアプリケーションを開発しています。<br>
+          実用的な価値と優れたユーザー体験の両立を追求します。
         </p>
       </div>
 
-      <!-- SaaS製品カード -->
-      <div class="grid md:grid-cols-3 gap-8 mb-12">
-        <!-- 製品1: CycleEarth -->
-        <div class="bg-gradient-to-br from-blue-50 to-white rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-300 overflow-hidden group border-2 border-blue-100">
-          <div class="h-48 bg-gradient-to-br from-blue-500 to-cyan-400 flex items-center justify-center relative overflow-hidden">
-            <div class="absolute inset-0 bg-black/5"></div>
-            <svg class="w-20 h-20 text-white z-10" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
-            </svg>
-          </div>
-          <div class="p-6">
-            <h3 class="text-2xl font-bold text-gray-900 mb-3">CycleEarth</h3>
-            <p class="text-gray-600 mb-4 leading-relaxed">
-              環境負荷を可視化し、サステナビリティを推進するプラットフォーム。CO2排出量の計算・管理・レポート作成を簡単に。
-            </p>
-            <div class="space-y-2 mb-6">
-              <div class="flex items-center text-sm text-gray-700">
-                <svg class="w-5 h-5 text-accent mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
-                </svg>
-                <span>CO2排出量の自動計算</span>
-              </div>
-              <div class="flex items-center text-sm text-gray-700">
-                <svg class="w-5 h-5 text-accent mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
-                </svg>
-                <span>可視化ダッシュボード</span>
-              </div>
-              <div class="flex items-center text-sm text-gray-700">
-                <svg class="w-5 h-5 text-accent mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
-                </svg>
-                <span>レポート自動生成</span>
-              </div>
+      <!-- アプリケーションカード -->
+      <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 mb-12">
+        <!-- アプリ1：3D地球バーチャル体験 -->
+        <div class="bg-white rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-300 overflow-hidden group border border-gray-100">
+          <div class="aspect-video bg-gradient-to-br from-emerald-400 to-green-600 flex items-center justify-center overflow-hidden relative">
+            <div class="absolute inset-0 flex items-center justify-center">
+              <span class="text-white text-5xl font-bold opacity-20">Coming Soon</span>
             </div>
-            <a href="https://cycleearth.net" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center w-full px-6 py-3 bg-blue-500 text-white font-semibold rounded-lg hover:bg-blue-600 transition-all duration-300 shadow-md hover:shadow-lg">
-              詳しく見る
-              <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"/>
-              </svg>
-            </a>
+            <img src="../assets/images/works/app_placeholder_1.png" alt="3D地球バーチャル体験アプリ" class="w-full h-full object-cover" loading="lazy" onerror="this.style.display='none';">
+          </div>
+          <div class="p-8">
+            <div class="flex items-center gap-2 mb-3">
+              <h3 class="text-2xl font-bold text-gray-900">3D地球バーチャル体験</h3>
+              <span class="px-3 py-1 bg-yellow-100 text-yellow-700 text-xs font-bold rounded-full whitespace-nowrap">開発中</span>
+            </div>
+            <p class="text-sm text-emerald-600 font-semibold mb-3">BLE連動型Webアプリケーション</p>
+            <p class="text-gray-600 mb-4 leading-relaxed">
+              IoTデバイスと連動し、実際の動作に応じて3D地球上をリアルタイムで移動する革新的な体験を提供します。運動と探索を組み合わせた新しいアプローチを開発中です。
+            </p>
+            <div class="flex flex-wrap gap-2 mb-4">
+              <span class="px-3 py-1 bg-emerald-100 text-emerald-600 text-sm font-semibold rounded-full">Web</span>
+              <span class="px-3 py-1 bg-emerald-100 text-emerald-600 text-sm font-semibold rounded-full">BLE</span>
+              <span class="px-3 py-1 bg-emerald-100 text-emerald-600 text-sm font-semibold rounded-full">3D</span>
+            </div>
           </div>
         </div>
 
-        <!-- 製品2: 運転日報アプリ -->
-        <div class="bg-gradient-to-br from-emerald-50 to-white rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-300 overflow-hidden group border-2 border-emerald-100">
-          <div class="h-48 bg-gradient-to-br from-emerald-500 to-teal-400 flex items-center justify-center relative overflow-hidden">
-            <div class="absolute inset-0 bg-black/5"></div>
-            <svg class="w-20 h-20 text-white z-10" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/>
-            </svg>
-          </div>
-          <div class="p-6">
-            <h3 class="text-2xl font-bold text-gray-900 mb-3">運転日報アプリ</h3>
-            <p class="text-gray-600 mb-4 leading-relaxed">
-              タンクトラック運転手向けの日報管理システム。運行記録の入力・管理・集計を効率化し、法令遵守をサポート。
-            </p>
-            <div class="space-y-2 mb-6">
-              <div class="flex items-center text-sm text-gray-700">
-                <svg class="w-5 h-5 text-accent mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
-                </svg>
-                <span>モバイルで簡単入力</span>
-              </div>
-              <div class="flex items-center text-sm text-gray-700">
-                <svg class="w-5 h-5 text-accent mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
-                </svg>
-                <span>運行記録の自動集計</span>
-              </div>
-              <div class="flex items-center text-sm text-gray-700">
-                <svg class="w-5 h-5 text-accent mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
-                </svg>
-                <span>法令遵守チェック機能</span>
-              </div>
+        <!-- アプリ2：目標達成支援プラットフォーム -->
+        <div class="bg-white rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-300 overflow-hidden group border border-gray-100">
+          <div class="aspect-video bg-gradient-to-br from-blue-400 to-emerald-500 flex items-center justify-center overflow-hidden relative">
+            <div class="absolute inset-0 flex items-center justify-center">
+              <span class="text-white text-5xl font-bold opacity-20">Coming Soon</span>
             </div>
-            <a href="../contact.html" class="inline-flex items-center justify-center w-full px-6 py-3 bg-emerald-500 text-white font-semibold rounded-lg hover:bg-emerald-600 transition-all duration-300 shadow-md hover:shadow-lg">
-              お問い合わせ
-              <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"/>
-              </svg>
-            </a>
+            <img src="../assets/images/works/app_placeholder_2.png" alt="目標達成支援アプリ" class="w-full h-full object-cover" loading="lazy" onerror="this.style.display='none';">
+          </div>
+          <div class="p-8">
+            <div class="flex items-center gap-2 mb-3">
+              <h3 class="text-2xl font-bold text-gray-900">目標達成支援プラットフォーム</h3>
+              <span class="px-3 py-1 bg-yellow-100 text-yellow-700 text-xs font-bold rounded-full whitespace-nowrap">開発中</span>
+            </div>
+            <p class="text-sm text-blue-600 font-semibold mb-3">習慣化×モチベーション管理</p>
+            <p class="text-gray-600 mb-4 leading-relaxed">
+              大きな目標を達成可能なステップに分解し、日々の習慣化で着実に前進。進捗の可視化とモチベーション維持機能で、継続的な成長をサポートします。
+            </p>
+            <div class="flex flex-wrap gap-2 mb-4">
+              <span class="px-3 py-1 bg-blue-100 text-blue-600 text-sm font-semibold rounded-full">iOS</span>
+              <span class="px-3 py-1 bg-blue-100 text-blue-600 text-sm font-semibold rounded-full">Android</span>
+              <span class="px-3 py-1 bg-blue-100 text-blue-600 text-sm font-semibold rounded-full">習慣化</span>
+            </div>
           </div>
         </div>
 
-        <!-- 製品3: ダンプトラッカー -->
-        <div class="bg-gradient-to-br from-amber-50 to-white rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-300 overflow-hidden group border-2 border-amber-100">
-          <div class="h-48 bg-gradient-to-br from-amber-500 to-orange-400 flex items-center justify-center relative overflow-hidden">
-            <div class="absolute inset-0 bg-black/5"></div>
-            <svg class="w-20 h-20 text-white z-10" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"/>
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"/>
-            </svg>
-          </div>
-          <div class="p-6">
-            <h3 class="text-2xl font-bold text-gray-900 mb-3">ダンプトラッカー</h3>
-            <p class="text-gray-600 mb-4 leading-relaxed">
-              ダンプトラックの運行管理・配車・進捗確認をリアルタイムで。建設現場の効率化を実現する総合管理システム。
-            </p>
-            <div class="space-y-2 mb-6">
-              <div class="flex items-center text-sm text-gray-700">
-                <svg class="w-5 h-5 text-accent mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
-                </svg>
-                <span>リアルタイム位置情報</span>
-              </div>
-              <div class="flex items-center text-sm text-gray-700">
-                <svg class="w-5 h-5 text-accent mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
-                </svg>
-                <span>配車最適化機能</span>
-              </div>
-              <div class="flex items-center text-sm text-gray-700">
-                <svg class="w-5 h-5 text-accent mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
-                </svg>
-                <span>運行実績の可視化</span>
-              </div>
+        <!-- アプリ3：業務効率化ソリューション -->
+        <div class="bg-white rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-300 overflow-hidden group border border-gray-100">
+          <div class="aspect-video bg-gradient-to-br from-purple-400 to-indigo-600 flex items-center justify-center overflow-hidden relative">
+            <div class="absolute inset-0 flex items-center justify-center">
+              <span class="text-white text-5xl font-bold opacity-20">Coming Soon</span>
             </div>
-            <a href="../contact.html" class="inline-flex items-center justify-center w-full px-6 py-3 bg-amber-500 text-white font-semibold rounded-lg hover:bg-amber-600 transition-all duration-300 shadow-md hover:shadow-lg">
-              お問い合わせ
-              <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"/>
-              </svg>
-            </a>
+            <img src="../assets/images/works/app_placeholder_3.png" alt="業務効率化アプリ" class="w-full h-full object-cover" loading="lazy" onerror="this.style.display='none';">
+          </div>
+          <div class="p-8">
+            <div class="flex items-center gap-2 mb-3">
+              <h3 class="text-2xl font-bold text-gray-900">業務効率化ソリューション</h3>
+              <span class="px-3 py-1 bg-yellow-100 text-yellow-700 text-xs font-bold rounded-full whitespace-nowrap">構想中</span>
+            </div>
+            <p class="text-sm text-purple-600 font-semibold mb-3">中小企業向けDXプラットフォーム</p>
+            <p class="text-gray-600 mb-4 leading-relaxed">
+              中小企業の日常業務を革新する、使いやすく実用的なソリューションを構想中。現場の声を反映した、本当に役立つツールの開発を目指しています。
+            </p>
+            <div class="flex flex-wrap gap-2 mb-4">
+              <span class="px-3 py-1 bg-purple-100 text-purple-600 text-sm font-semibold rounded-full">Web</span>
+              <span class="px-3 py-1 bg-purple-100 text-purple-600 text-sm font-semibold rounded-full">クラウド</span>
+              <span class="px-3 py-1 bg-purple-100 text-purple-600 text-sm font-semibold rounded-full">DX</span>
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="text-center">
-        <p class="text-gray-600 mb-6">
-          これらのSaaS製品は、実際の業務課題から生まれたソリューションです。<br>
-          月額サブスクリプションで、初期費用を抑えてすぐにご利用いただけます。
+      <!-- 補足メッセージ -->
+      <div class="text-center mt-12">
+        <p class="text-gray-500 text-sm">
+          ※ 開発中のプロジェクトは、リリース時期が変更になる場合があります。
         </p>
       </div>
     </div>
