Google Analytics 4 の設定

--- a/works/works_under_construction.html
+++ b/works/works_under_construction.html
@@ -24,6 +24,15 @@
     }
   </script>
   
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NEEPVEXTLX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-NEEPVEXTLX');
+  </script>
+
   <style>
     @keyframes float {
       0%, 100% { transform: translateY(0px); }
