構造化データの実装 (Organization Schema)

--- a/works/index.html
+++ b/works/index.html
@@ -18,14 +18,46 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NEEPVEXTLX"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-NEEPVEXTLX');
-    </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NEEPVEXTLX"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-NEEPVEXTLX');
+  </script>
+
+  <!-- 構造化データ (Organization Schema) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "合同会社カイタックジャパン",
+    "alternateName": "Khaithac Japan LLC",
+    "url": "https://www.khaithac-jp.com",
+    "logo": "https://www.khaithac-jp.com/assets/images/logo/horizontal_tagline_on_transe.png",
+    "foundingDate": "2017-01",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "春日西町2丁目28番26号",
+      "addressLocality": "枚方市",
+      "addressRegion": "大阪府",
+      "postalCode": "573-0136",
+      "addressCountry": "JP"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+81-72-300-2410",
+      "contactType": "customer service",
+      "areaServed": "JP",
+      "availableLanguage": ["ja"],
+      "email": "info@khaithac-jp.com"
+    },
+    "sameAs": [
+      "https://github.com/karkyon"
+    ]
+  }
+  </script>
 
   <!-- コンポーネントローダー -->
   <script src="../assets/js/components-loader.js"></script>
