Heroセクションの画像webPコード修正

--- a/contact.html
+++ b/contact.html
@@ -3,31 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- SEO Meta Tags -->
-    <title>お問い合わせ | カイタックジャパン</title>
-    <meta name="description" content="カイタックジャパンへのお問い合わせはこちら。無料相談を承ります。お気軽にご連絡ください。">
-    
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.khaithac-jp.com/contact.html">
-    <meta property="og:title" content="お問い合わせ | カイタックジャパン">
-    <meta property="og:description" content="カイタックジャパンへのお問い合わせはこちら。無料相談を承ります。お気軽にご連絡ください。">
-    <meta property="og:image" content="https://www.khaithac-jp.com/assets/images/ogp/ogp-main.png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
-    <meta property="og:locale" content="ja_JP">
-    <meta property="og:site_name" content="カイタックジャパン">
-    
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.khaithac-jp.com/contact.html">
-    <meta name="twitter:title" content="お問い合わせ | カイタックジャパン">
-    <meta name="twitter:description" content="カイタックジャパンへのお問い合わせはこちら。無料相談を承ります。お気軽にご連絡ください。">
-    <meta name="twitter:image" content="https://www.khaithac-jp.com/assets/images/ogp/ogp-main.png">
 
+  <!-- SEO Meta Tags -->
+  <title>お問い合わせ | カイタックジャパン</title>
+  <meta name="description" content="カイタックジャパンへのお問い合わせはこちら。無料相談を承ります。お気軽にご連絡ください。">
   
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.khaithac-jp.com/contact.html">
+  <meta property="og:title" content="お問い合わせ | カイタックジャパン">
+  <meta property="og:description" content="カイタックジャパンへのお問い合わせはこちら。無料相談を承ります。お気軽にご連絡ください。">
+  <meta property="og:image" content="https://www.khaithac-jp.com/assets/images/ogp/ogp-main.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:locale" content="ja_JP">
+  <meta property="og:site_name" content="カイタックジャパン">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://www.khaithac-jp.com/contact.html">
+  <meta name="twitter:title" content="お問い合わせ | カイタックジャパン">
+  <meta name="twitter:description" content="カイタックジャパンへのお問い合わせはこちら。無料相談を承ります。お気軽にご連絡ください。">
+  <meta name="twitter:image" content="https://www.khaithac-jp.com/assets/images/ogp/ogp-main.png">
+
   <meta name="keywords" content="カイタックジャパン,お問い合わせ,相談,見積もり,システム開発">
-  
   
   <!-- ファビコン - 複数サイズ -->
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
@@ -115,7 +114,13 @@
 
     /* HEROセクション背景画像スタイル */
     .hero-background {
+      /* フォールバック用の元の画像 */
       background-image: linear-gradient(rgba(26, 26, 26, 0.4), rgba(26, 26, 26, 0.2)), url('assets/images/hero/contact_hero_bg.jpg');
+      /* WebP対応（image-set） */
+      background-image: linear-gradient(rgba(26, 26, 26, 0.4), rgba(26, 26, 26, 0.2)), image-set(
+        url('assets/images/hero/contact_hero_bg.webp') type('image/webp'),
+        url('assets/images/hero/contact_hero_bg.jpg') type('image/jpeg')
+      );
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
