--- a/works/index.html
+++ b/works/index.html
@@ -3,31 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- SEO Meta Tags -->
-    <title>お客様事例 | カイタックジャパン</title>
-    <meta name="description" content="カイタックジャパンの開発実績・導入事例をご紹介。製造業を中心に、短期間・高品質な開発で確実な効果を実現します。">
-    
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.khaithac-jp.com/works/index.html">
-    <meta property="og:title" content="お客様事例 | カイタックジャパン">
-    <meta property="og:description" content="カイタックジャパンの開発実績・導入事例をご紹介。製造業を中心に、短期間・高品質な開発で確実な効果を実現します。">
-    <meta property="og:image" content="https://www.khaithac-jp.com/assets/images/ogp/ogp-main.png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
-    <meta property="og:locale" content="ja_JP">
-    <meta property="og:site_name" content="カイタックジャパン">
-    
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.khaithac-jp.com/works/index.html">
-    <meta name="twitter:title" content="お客様事例 | カイタックジャパン">
-    <meta name="twitter:description" content="カイタックジャパンの開発実績・導入事例をご紹介。製造業を中心に、短期間・高品質な開発で確実な効果を実現します。">
-    <meta name="twitter:image" content="https://www.khaithac-jp.com/assets/images/ogp/ogp-main.png">
 
+  <!-- SEO Meta Tags -->
+  <title>お客様事例 | カイタックジャパン</title>
+  <meta name="description" content="カイタックジャパンの開発実績・導入事例をご紹介。製造業を中心に、短期間・高品質な開発で確実な効果を実現します。">
   
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.khaithac-jp.com/works/index.html">
+  <meta property="og:title" content="お客様事例 | カイタックジャパン">
+  <meta property="og:description" content="カイタックジャパンの開発実績・導入事例をご紹介。製造業を中心に、短期間・高品質な開発で確実な効果を実現します。">
+  <meta property="og:image" content="https://www.khaithac-jp.com/assets/images/ogp/ogp-main.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:locale" content="ja_JP">
+  <meta property="og:site_name" content="カイタックジャパン">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://www.khaithac-jp.com/works/index.html">
+  <meta name="twitter:title" content="お客様事例 | カイタックジャパン">
+  <meta name="twitter:description" content="カイタックジャパンの開発実績・導入事例をご紹介。製造業を中心に、短期間・高品質な開発で確実な効果を実現します。">
+  <meta name="twitter:image" content="https://www.khaithac-jp.com/assets/images/ogp/ogp-main.png">
+
   <meta name="keywords" content="開発実績,事例,ポートフォリオ,システム開発,導入事例,カイタックジャパン">
-  
   
   <!-- ファビコン - 複数サイズ -->
   <link rel="icon" type="image/png" sizes="32x32" href="../assets/images/favicon/favicon-32x32.png">
@@ -108,9 +107,16 @@
   
   <style>
     html { scroll-behavior: smooth; }
+
     /* HEROセクション背景画像スタイル */
     .hero-background {
+      /* フォールバック用の元の画像 */
       background-image: linear-gradient(rgba(26,26,26, 0.4), rgba(26,26,26, 0.2)), url('../assets/images/hero/talon_hero_bg.jpeg');
+      /* WebP対応（image-set） */
+      background-image: linear-gradient(rgba(26,26,26, 0.4), rgba(26,26,26, 0.2)), image-set(
+        url('../assets/images/hero/talon_hero_bg.webp') type('image/webp'),
+        url('../assets/images/hero/talon_hero_bg.jpeg') type('image/jpeg')
+      );
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
